--- a/installscript.toml
+++ b/installscript.toml
@@ -1,3 +1,5 @@
+# SPDX-License-Identifier: CC0-1.0
+
 # 言語インストールスクリプト
 #
 # 言語をインストールするためのスクリプトをTOML形式で記述していただきます
@@ -28,6 +30,21 @@
 #       'Java'
 #       'Python3'
 language = 'Haskell'
+
+# キー: display
+# 型:   文字列
+# 要否: 必須
+# 説明: この言語として表示される文字列
+#       このインストールスクリプトでインストールされる言語に関する表示される文字列を記述してください
+#       ここで指定された文字列は提出画面における言語選択で表示される文字列となります
+#       そのためプログラミング言語名や言語のバージョン、コンパイラ/インタプリタ名など、ユーザが提出言語を選ぶときに必要となる情報を記述してください
+#       ただしコンパイルコマンドや実行コマンド、インストールされるライブラリなどは別途ルールページなどで見ることができますので提出画面における言語選択として妥当な文字列を記述してください
+#       具体的には現状の提出画面における表示を参考にしてください
+# 例:   'C++23 (GCC 15.1)'
+#       'C++23 (Clang 18.1.8)'
+#       'Java24 (OpenJDK 24.0.1)'
+#       'Python3 (CPython 3.13.3)'
+display = 'Haskell (GHC 9.8.4)'
 
 # キー: name
 # 型:   文字列
@@ -140,7 +157,7 @@ library.StateVar = { license = [
 ], indirect = true, version = '1.2.2' }
 library.ac-library-hs = { license = [
     { name = 'CC0-1.0', url = 'https://hackage.haskell.org/package/ac-library-hs/src/LICENSE' },
-], version = '1.4.0.0' }
+], version = '1.5.0.0' }
 library.adjunctions = { license = [
     { name = 'BSD-2-Clause', url = 'https://hackage.haskell.org/package/adjunctions/src/LICENSE' },
 ], version = '4.4.3' }
@@ -179,7 +196,7 @@ library.bitvec = { license = [
 ], version = '1.1.5.0' }
 library.blaze-builder = { license = [
     { name = 'BSD-3-Clause', url = 'https://hackage.haskell.org/package/blaze-builder/src/LICENSE' },
-], indirect = true, version = '0.4.2.3' }
+], indirect = true, version = '0.4.3' }
 library.blaze-html = { license = [
     { name = 'BSD-3-Clause', url = 'https://hackage.haskell.org/package/blaze-html/src/LICENSE' },
 ], indirect = true, version = '0.9.2.0' }
@@ -242,10 +259,10 @@ library.filepath = { license = [
 ], version = '1.4.301.0' }
 library.fingertree = { license = [
     { name = 'BSD-3-Clause', url = 'https://hackage.haskell.org/package/fingertree/src/LICENSE' },
-], indirect = true, version = '0.1.5.0' }
+], indirect = true, version = '0.1.6.1' }
 library.flow = { license = [
     { name = 'MIT', url = 'https://hackage.haskell.org/package/flow/src/LICENSE.txt' },
-], version = '2.0.0.7' }
+], version = '2.0.0.9' }
 library.foldl = { license = [
     { name = 'BSD-3-Clause', url = 'https://hackage.haskell.org/package/foldl/src/LICENSE' },
 ], indirect = true, version = '1.4.18' }
@@ -395,7 +412,7 @@ library.regex-base = { license = [
 ], indirect = true, version = '0.94.0.3' }
 library.regex-tdfa = { license = [
     { name = 'BSD-3-Clause', url = 'https://hackage.haskell.org/package/regex-tdfa/src/LICENSE' },
-], version = '1.3.2.3' }
+], version = '1.3.2.4' }
 library.safe-exceptions = { license = [
     { name = 'MIT', url = 'https://hackage.haskell.org/package/safe-exceptions/src/LICENSE' },
 ], version = '0.1.7.4' }
@@ -595,7 +612,7 @@ executable main
                   Cabal ^>=3.14.2.0,
                   Cabal-syntax ^>=3.14.2.0,
                   QuickCheck ^>=2.15.0.1,
-                  ac-library-hs ^>=1.4.0.0,
+                  ac-library-hs ^>=1.5.0.0,
                   adjunctions ^>=4.4.3,
                   array ==0.5.8.0,
                   attoparsec ^>=0.14.4,
@@ -614,7 +631,7 @@ executable main
                   extra ^>=1.8,
                   fgl ^>=5.8.3.0,
                   filepath ^>=1.4.301.0,
-                  flow ^>=2.0.0.7,
+                  flow ^>=2.0.0.9,
                   free ^>=5.2,
                   ghc-bignum ==1.3,
                   ghc-boot-th ==9.8.4,
@@ -651,7 +668,7 @@ executable main
                   psqueues ^>=0.2.8.1,
                   random ^>=1.2.1.3,
                   reflection ^>=2.1.9,
-                  regex-tdfa ^>=1.3.2.3,
+                  regex-tdfa ^>=1.3.2.4,
                   safe-exceptions ^>=0.1.7.4,
                   scientific ^>=0.3.8.0,
                   semialign ^>=1.3.1,
@@ -711,7 +728,7 @@ constraints: any.Cabal ==3.14.2.0,
              any.QuickCheck ==2.15.0.1,
              QuickCheck -old-random +templatehaskell,
              any.StateVar ==1.2.2,
-             any.ac-library-hs ==1.4.0.0,
+             any.ac-library-hs ==1.5.0.0,
              any.adjunctions ==4.4.3,
              any.alex ==3.5.3.0,
              any.ansi-terminal ==1.1.2,
@@ -731,7 +748,7 @@ constraints: any.Cabal ==3.14.2.0,
              any.binary ==0.8.9.1,
              any.bitvec ==1.1.5.0,
              bitvec +simd,
-             any.blaze-builder ==0.4.2.3,
+             any.blaze-builder ==0.4.3,
              any.blaze-html ==0.9.2.0,
              any.blaze-markup ==0.8.3.0,
              any.bytestring ==0.12.1.0,
@@ -757,8 +774,8 @@ constraints: any.Cabal ==3.14.2.0,
              any.fgl ==5.8.3.0,
              fgl +containers042,
              any.filepath ==1.4.301.0,
-             any.fingertree ==0.1.5.0,
-             any.flow ==2.0.0.7,
+             any.fingertree ==0.1.6.1,
+             any.flow ==2.0.0.9,
              flow -pedantic,
              any.foldl ==1.4.18,
              any.free ==5.2,
@@ -827,7 +844,7 @@ constraints: any.Cabal ==3.14.2.0,
              any.reflection ==2.1.9,
              reflection -slow +template-haskell,
              any.regex-base ==0.94.0.3,
-             any.regex-tdfa ==1.3.2.3,
+             any.regex-tdfa ==1.3.2.4,
              regex-tdfa +doctest -force-o2,
              any.rts ==1.0.2,
              any.safe-exceptions ==0.1.7.4,
@@ -890,7 +907,7 @@ constraints: any.Cabal ==3.14.2.0,
              any.wide-word ==0.1.7.0,
              any.witherable ==0.5,
              any.xhtml ==3000.2.2.1
-index-state: hackage.haskell.org 2025-05-04T04:43:13Z
+index-state: hackage.haskell.org 2025-05-24T14:41:27Z
 
 CABAL_PROJECT_FREEZE_EOF
 
