--- a/installscript.toml
+++ b/installscript.toml
@@ -151,13 +151,13 @@ library.OneTuple = { license = [
 ], indirect = true, version = '0.4.2' }
 library.QuickCheck = { license = [
     { name = 'BSD-3-Clause', url = 'https://hackage.haskell.org/package/QuickCheck/src/LICENSE' },
-], version = '2.15.0.1' }
+], version = '2.16.0.0' }
 library.StateVar = { license = [
     { name = 'BSD-3-Clause', url = 'https://hackage.haskell.org/package/StateVar/src/LICENSE' },
 ], indirect = true, version = '1.2.2' }
 library.ac-library-hs = { license = [
     { name = 'CC0-1.0', url = 'https://hackage.haskell.org/package/ac-library-hs/src/LICENSE' },
-], version = '1.5.1.0' }
+], version = '1.5.2.0' }
 library.adjunctions = { license = [
     { name = 'BSD-2-Clause', url = 'https://hackage.haskell.org/package/adjunctions/src/LICENSE' },
 ], version = '4.4.3' }
@@ -313,10 +313,10 @@ library.invariant = { license = [
 ], indirect = true, version = '0.6.4' }
 library.kan-extensions = { license = [
     { name = 'BSD-3-Clause', url = 'https://hackage.haskell.org/package/kan-extensions/src/LICENSE' },
-], version = '5.2.6' }
+], version = '5.2.7' }
 library.lens = { license = [
     { name = 'BSD-2-Clause', url = 'https://hackage.haskell.org/package/lens/src/LICENSE' },
-], version = '5.3.4' }
+], version = '5.3.5' }
 library.linear-base = { license = [
     { name = 'MIT', url = 'https://hackage.haskell.org/package/linear-base/src/LICENSE' },
 ], version = '0.5.0' }
@@ -391,7 +391,7 @@ library.process = { license = [
 ], version = '1.6.25.0' }
 library.profunctors = { license = [
     { name = 'BSD-3-Clause', url = 'https://hackage.haskell.org/package/profunctors/src/LICENSE' },
-], version = '5.6.2' }
+], version = '5.6.3' }
 library.psqueues = { license = [
     { name = 'BSD-3-Clause', url = 'https://hackage.haskell.org/package/psqueues/src/LICENSE' },
 ], version = '0.2.8.1' }
@@ -516,8 +516,8 @@ library.vector-algorithms = { license = [
     { name = 'BSD-3-Clause', url = 'https://hackage.haskell.org/package/vector-algorithms/src/LICENSE' },
 ], version = '0.9.1.0' }
 library.vector-split = { license = [
-    { name = 'BSD-3-Clause', url = 'https://hackage.haskell.org/package/vector-split-1.0.0.3/src/LICENSE' },
-], version = '1.0.0.3' }
+    { name = 'MIT', url = 'https://hackage.haskell.org/package/vector-split-1.0.0.4/src/LICENSE' },
+], version = '1.0.0.4' }
 library.vector-stream = { license = [
     { name = 'BSD-3-Clause', url = 'https://hackage.haskell.org/package/vector-stream/src/LICENSE' },
 ], version = '0.1.0.1' }
@@ -529,7 +529,7 @@ library.void = { license = [
 ], indirect = true, version = '0.7.3' }
 library.wide-word = { license = [
     { name = 'BSD-2-Clause', url = 'https://hackage.haskell.org/package/wide-word/src/LICENSE' },
-], version = '0.1.7.0' }
+], version = '0.1.7.1' }
 library.witherable = { license = [
     { name = 'BSD-3-Clause', url = 'https://hackage.haskell.org/package/witherable/src/LICENSE' },
 ], version = '0.5' }
@@ -611,8 +611,8 @@ executable main
     build-depends:
                   Cabal ^>=3.14.2.0,
                   Cabal-syntax ^>=3.14.2.0,
-                  QuickCheck ^>=2.15.0.1,
-                  ac-library-hs ^>=1.5.1.0,
+                  QuickCheck ^>=2.16.0.0,
+                  ac-library-hs ^>=1.5.2.0,
                   adjunctions ^>=4.4.3,
                   array ==0.5.8.0,
                   attoparsec ^>=0.14.4,
@@ -647,8 +647,8 @@ executable main
                   indexed-traversable-instances ^>=0.1.2,
                   integer-gmp ^>=1.1,
                   integer-logarithms ^>=1.0.4,
-                  kan-extensions ^>=5.2.6,
-                  lens ^>=5.3.4,
+                  kan-extensions ^>=5.2.7,
+                  lens ^>=5.3.5,
                   linear-base ^>=0.5.0,
                   list-t ^>=1.0.5.7,
                   massiv ^>=1.0.5.0,
@@ -664,7 +664,7 @@ executable main
                   pretty ^>=1.1.3.6,
                   primitive ^>=0.9.1.0,
                   process ^>=1.6.25.0,
-                  profunctors ^>=5.6.2,
+                  profunctors ^>=5.6.3,
                   psqueues ^>=0.2.8.1,
                   random ^>=1.2.1.3,
                   reflection ^>=2.1.9,
@@ -692,10 +692,10 @@ executable main
                   utility-ht ^>=0.0.17.2,
                   vector ^>=0.13.2.0,
                   vector-algorithms ^>=0.9.1.0,
-                  vector-split ^>=1.0.0.3,
+                  vector-split ^>=1.0.0.4,
                   vector-stream ^>=0.1.0.1,
                   vector-th-unbox ^>=0.2.2,
-                  wide-word ^>=0.1.7.0,
+                  wide-word ^>=0.1.7.1,
                   witherable ^>=0.5,
                   xhtml ^>=3000.2.2.1
 
@@ -725,10 +725,10 @@ active-repositories: hackage.haskell.org:merge
 constraints: any.Cabal ==3.14.2.0,
              any.Cabal-syntax ==3.14.2.0,
              any.OneTuple ==0.4.2,
-             any.QuickCheck ==2.15.0.1,
+             any.QuickCheck ==2.16.0.0,
              QuickCheck -old-random +templatehaskell,
              any.StateVar ==1.2.2,
-             any.ac-library-hs ==1.5.1.0,
+             any.ac-library-hs ==1.5.2.0,
              any.adjunctions ==4.4.3,
              any.alex ==3.5.3.0,
              any.ansi-terminal ==1.1.2,
@@ -800,8 +800,8 @@ constraints: any.Cabal ==3.14.2.0,
              any.integer-logarithms ==1.0.4,
              integer-logarithms -check-bounds +integer-gmp,
              any.invariant ==0.6.4,
-             any.kan-extensions ==5.2.6,
-             any.lens ==5.3.4,
+             any.kan-extensions ==5.2.7,
+             any.lens ==5.3.5,
              lens -benchmark-uniplate -dump-splices +inlining -j +test-hunit +test-properties +test-templates +trustworthy,
              any.linear-base ==0.5.0,
              any.linear-generics ==0.2.3,
@@ -836,7 +836,7 @@ constraints: any.Cabal ==3.14.2.0,
              any.prettyprinter-ansi-terminal ==1.1.3,
              any.primitive ==0.9.1.0,
              any.process ==1.6.25.0,
-             any.profunctors ==5.6.2,
+             any.profunctors ==5.6.3,
              any.psqueues ==0.2.8.1,
              any.pvar ==1.0.0.0,
              any.random ==1.2.1.3,
@@ -899,15 +899,15 @@ constraints: any.Cabal ==3.14.2.0,
              vector +boundschecks -internalchecks -unsafechecks -wall,
              any.vector-algorithms ==0.9.1.0,
              vector-algorithms +bench +boundschecks -internalchecks +llvm -unsafechecks,
-             any.vector-split ==1.0.0.3,
+             any.vector-split ==1.0.0.4,
              any.vector-stream ==0.1.0.1,
              any.vector-th-unbox ==0.2.2,
              any.void ==0.7.3,
              void -safe,
-             any.wide-word ==0.1.7.0,
+             any.wide-word ==0.1.7.1,
              any.witherable ==0.5,
              any.xhtml ==3000.2.2.1
-index-state: hackage.haskell.org 2025-06-15T04:16:50Z
+index-state: hackage.haskell.org 2025-06-22T05:15:57Z
 
 CABAL_PROJECT_FREEZE_EOF
 
