--- a/installscript.toml
+++ b/installscript.toml
@@ -196,7 +196,7 @@ library.bitvec = { license = [
 ], version = '1.1.5.0' }
 library.blaze-builder = { license = [
     { name = 'BSD-3-Clause', url = 'https://hackage.haskell.org/package/blaze-builder/src/LICENSE' },
-], indirect = true, version = '0.4.4' }
+], indirect = true, version = '0.4.4.1' }
 library.blaze-html = { license = [
     { name = 'BSD-3-Clause', url = 'https://hackage.haskell.org/package/blaze-html/src/LICENSE' },
 ], indirect = true, version = '0.9.2.0' }
@@ -724,7 +724,8 @@ cat > cabal.project <<'CABAL_PROJECT_EOF'
 packages: ./submission.cabal
 
 constraints: bitvec +libgmp,
-             -- clock +llvm,
+             clock +llvm,
+             text -simdutf,
              vector-algorithms +llvm
 optimization: 2
 
@@ -732,7 +733,20 @@ package *
     compiler: ghc
     ghc-options: -fllvm -Wall
 
-allow-newer: ilist:base,directory:time,Cabal-syntax:time,Cabal:time,ac-library-hs:random,witherable:containers,semialign:containers,scientific:containers,parallel:containers,megaparsec:containers,foldl:containers,linear-generics:containers,indexed-traversable:containers,hashable:containers
+allow-newer: ilist:base,
+             directory:time,
+             Cabal-syntax:time,
+             Cabal:time,
+             ac-library-hs:random,
+             witherable:containers,
+             semialign:containers,
+             scientific:containers,
+             parallel:containers,
+             megaparsec:containers,
+             foldl:containers,
+             linear-generics:containers,
+             indexed-traversable:containers,
+             hashable:containers
 
 CABAL_PROJECT_EOF
 
@@ -765,7 +779,7 @@ constraints: any.Cabal ==3.16.0.0,
              any.binary ==0.8.9.3,
              any.bitvec ==1.1.5.0,
              bitvec +simd,
-             any.blaze-builder ==0.4.4,
+             any.blaze-builder ==0.4.4.1,
              any.blaze-html ==0.9.2.0,
              any.blaze-markup ==0.8.3.0,
              any.bytestring ==0.12.2.0,
@@ -773,7 +787,7 @@ constraints: any.Cabal ==3.16.0.0,
              any.case-insensitive ==1.2.1.0,
              any.charset ==0.3.12,
              any.clock ==0.8.4,
-             clock -llvm,
+             clock +llvm,
              any.colour ==2.3.6,
              any.comonad ==5.0.9,
              comonad +containers +distributive +indexed-traversable,
@@ -892,14 +906,13 @@ constraints: any.Cabal ==3.16.0.0,
              any.strict ==0.5.1,
              any.strict-lens ==0.4.1,
              submission +atcoder,
-             any.system-cxx-std-lib ==1.0,
              any.tagged ==0.8.9,
              tagged +deepseq +transformers,
              any.tasty ==1.5.3,
              tasty +unix,
              any.template-haskell ==2.22.0.0,
              any.text ==2.1.3,
-             text -developer -extendedbenchmarks -pure-haskell +simdutf,
+             text -developer -extendedbenchmarks -pure-haskell -simdutf,
              any.tf-random ==0.5,
              any.th-abstraction ==0.7.1.0,
              any.these ==1.2.1,
@@ -932,7 +945,7 @@ constraints: any.Cabal ==3.16.0.0,
              any.wide-word ==0.1.7.1,
              any.witherable ==0.5,
              any.xhtml ==3000.4.0.0
-index-state: hackage.haskell.org 2025-08-28T10:04:41Z
+index-state: hackage.haskell.org 2025-08-29T11:55:31Z
 
 CABAL_PROJECT_FREEZE_EOF
 
