--- a/installscript.toml
+++ b/installscript.toml
@@ -161,6 +161,9 @@ library.ac-library-hs = { license = [
 library.adjunctions = { license = [
     { name = 'BSD-2-Clause', url = 'https://hackage.haskell.org/package/adjunctions/src/LICENSE' },
 ], version = '4.4.3' }
+library.alex = { license = [
+    { name = 'BSD-3-Clause', url = 'https://hackage.haskell.org/package/alex/src/LICENSE' },
+], version = '3.5.4.0' }
 library.ansi-terminal = { license = [
     { name = 'BSD-3-Clause', url = 'https://hackage.haskell.org/package/ansi-terminal/src/LICENSE' },
 ], indirect = true, version = '1.1.3' }
@@ -368,6 +371,9 @@ library.mutable-containers = { license = [
 library.mwc-random = { license = [
     { name = 'BSD-2-Clause', url = 'https://hackage.haskell.org/package/mwc-random/src/LICENSE' },
 ], version = '0.15.2.0' }
+library.optparse-applicative = { license = [
+    { name = 'BSD-3-Clause', url = 'https://hackage.haskell.org/package/optparse-applicative/src/LICENSE' },
+], indirect = true, version = '0.19.0.0' }
 library.os-string = { license = [
     { name = 'BSD-3-Clause', url = 'https://hackage.haskell.org/package/os-string/src/LICENSE' },
 ], indirect = true, version = '2.0.8' }
@@ -467,6 +473,9 @@ library.strict-lens = { license = [
 library.tagged = { license = [
     { name = 'BSD-3-Clause', url = 'https://hackage.haskell.org/package/tagged/src/LICENSE' },
 ], version = '0.8.9' }
+library.tasty = { license = [
+    { name = 'MIT', url = 'https://hackage.haskell.org/package/tasty/src/LICENSE' },
+], version = '1.5.3' }
 library.template-haskell = { license = [
     { name = 'BSD-3-Clause', url = 'https://hackage.haskell.org/package/template-haskell/src/LICENSE' },
 ], version = '2.22.0.0' }
