--- a/installscript.toml
+++ b/installscript.toml
@@ -44,7 +44,7 @@ language = 'Haskell'
 #       'C++23 (Clang 18.1.8)'
 #       'Java24 (OpenJDK 24.0.1)'
 #       'Python3 (CPython 3.13.3)'
-display = 'Haskell (GHC 9.10.2.20250817)'
+display = 'Haskell (GHC 9.8.4)'
 
 # キー: name
 # 型:   文字列
@@ -64,7 +64,7 @@ name = 'GHC'
 # 例:   '14.2'
 #       '18.1.8'
 #       '23'
-version = '9.10.2.20250817'
+version = '9.8.4'
 
 # キー: license
 # 型:   配列
@@ -157,13 +157,10 @@ library.StateVar = { license = [
 ], indirect = true, version = '1.2.2' }
 library.ac-library-hs = { license = [
     { name = 'CC0-1.0', url = 'https://hackage.haskell.org/package/ac-library-hs/src/LICENSE' },
-], version = '1.5.2.1' }
+], version = '1.5.3.0' }
 library.adjunctions = { license = [
     { name = 'BSD-2-Clause', url = 'https://hackage.haskell.org/package/adjunctions/src/LICENSE' },
 ], version = '4.4.3' }
-library.alex = { license = [
-    { name = 'BSD-3-Clause', url = 'https://hackage.haskell.org/package/alex/src/LICENSE' },
-], version = '3.5.4.0' }
 library.ansi-terminal = { license = [
     { name = 'BSD-3-Clause', url = 'https://hackage.haskell.org/package/ansi-terminal/src/LICENSE' },
 ], indirect = true, version = '1.1.3' }
@@ -184,7 +181,7 @@ library.attoparsec = { license = [
 ], version = '0.14.4' }
 library.base = { license = [
     { name = 'BSD-3-Clause', url = 'https://hackage.haskell.org/package/base/src/LICENSE' },
-], version = '4.20.2.0' }
+], version = '4.19.2.0' }
 library.base-orphans = { license = [
     { name = 'MIT', url = 'https://hackage.haskell.org/package/base-orphans/src/LICENSE' },
 ], indirect = true, version = '0.9.3' }
@@ -208,7 +205,7 @@ library.blaze-markup = { license = [
 ], indirect = true, version = '0.8.3.0' }
 library.bytestring = { license = [
     { name = 'BSD-3-Clause', url = 'https://hackage.haskell.org/package/bytestring/src/LICENSE' },
-], version = '0.12.2.0' }
+], version = '0.12.1.0' }
 library.call-stack = { license = [
     { name = 'MIT', url = 'https://hackage.haskell.org/package/call-stack/src/LICENSE' },
 ], indirect = true, version = '0.4.0' }
@@ -238,16 +235,16 @@ library.data-default-class = { license = [
 ], indirect = true, version = '0.1.2.2' }
 library.deepseq = { license = [
     { name = 'BSD-3-Clause', url = 'https://hackage.haskell.org/package/deepseq/src/LICENSE' },
-], version = '1.5.0.0' }
+], version = '1.5.1.0' }
 library.directory = { license = [
     { name = 'BSD-3-Clause', url = 'https://hackage.haskell.org/package/directory/src/LICENSE' },
-], version = '1.3.9.0' }
+], version = '1.3.8.5' }
 library.distributive = { license = [
     { name = 'BSD-2-Clause', url = 'https://hackage.haskell.org/package/distributive/src/LICENSE' },
 ], version = '0.6.2.1' }
 library.exceptions = { license = [
     { name = 'BSD-3-Clause', url = 'https://hackage.haskell.org/package/exceptions/src/LICENSE' },
-], version = '0.10.10' }
+], version = '0.10.7' }
 library.extra = { license = [
     { name = 'BSD-3-Clause', url = 'https://hackage.haskell.org/package/extra/src/LICENSE' },
 ], version = '1.8' }
@@ -256,10 +253,7 @@ library.fgl = { license = [
 ], version = '5.8.3.0' }
 library.filepath = { license = [
     { name = 'BSD-3-Clause', url = 'https://hackage.haskell.org/package/filepath/src/LICENSE' },
-], version = '1.5.4.0' }
-library.file-io = { license = [
-    { name = 'BSD-3-Clause', url = 'https://hackage.haskell.org/package/file-io/src/LICENSE' },
-], indirect = true, version = '0.1.5' }
+], version = '1.4.301.0' }
 library.fingertree = { license = [
     { name = 'BSD-3-Clause', url = 'https://hackage.haskell.org/package/fingertree/src/LICENSE' },
 ], indirect = true, version = '0.1.6.2' }
@@ -275,18 +269,9 @@ library.free = { license = [
 library.ghc-bignum = { license = [
     { name = 'BSD-3-Clause', url = 'https://hackage.haskell.org/package/ghc-bignum/src/LICENSE' },
 ], version = '1.3' }
-library.ghc-boot-th = { license = [
-    { name = 'BSD-3-Clause', url = 'https://hackage.haskell.org/package/ghc-boot-th/src/LICENSE' },
-], version = '9.10.2.20250817' }
-library.ghc-experimental = { license = [
-    { name = 'BSD-3-Clause', url = 'https://hackage.haskell.org/package/ghc-experimental/src/LICENSE' },
-], version = '9.1002.0' }
-library.ghc-internal = { license = [
-    { name = 'BSD-3-Clause', url = 'https://hackage.haskell.org/package/ghc-internal/src/LICENSE' },
-], version = '9.1002.0' }
 library.ghc-prim = { license = [
     { name = 'BSD-3-Clause', url = 'https://hackage.haskell.org/package/ghc-prim/src/LICENSE' },
-], version = '0.12.0' }
+], version = '0.11.0' }
 library.hashable = { license = [
     { name = 'BSD-3-Clause', url = 'https://hackage.haskell.org/package/hashable/src/LICENSE' },
 ], version = '1.5.0.0' }
@@ -371,9 +356,6 @@ library.mutable-containers = { license = [
 library.mwc-random = { license = [
     { name = 'BSD-2-Clause', url = 'https://hackage.haskell.org/package/mwc-random/src/LICENSE' },
 ], version = '0.15.2.0' }
-library.optparse-applicative = { license = [
-    { name = 'BSD-3-Clause', url = 'https://hackage.haskell.org/package/optparse-applicative/src/LICENSE' },
-], indirect = true, version = '0.19.0.0' }
 library.os-string = { license = [
     { name = 'BSD-3-Clause', url = 'https://hackage.haskell.org/package/os-string/src/LICENSE' },
 ], indirect = true, version = '2.0.8' }
@@ -473,12 +455,9 @@ library.strict-lens = { license = [
 library.tagged = { license = [
     { name = 'BSD-3-Clause', url = 'https://hackage.haskell.org/package/tagged/src/LICENSE' },
 ], version = '0.8.9' }
-library.tasty = { license = [
-    { name = 'MIT', url = 'https://hackage.haskell.org/package/tasty/src/LICENSE' },
-], version = '1.5.3' }
 library.template-haskell = { license = [
     { name = 'BSD-3-Clause', url = 'https://hackage.haskell.org/package/template-haskell/src/LICENSE' },
-], version = '2.22.0.0' }
+], version = '2.21.0.0' }
 library.text = { license = [
     { name = 'BSD-2-Clause', url = 'https://hackage.haskell.org/package/text/src/LICENSE' },
 ], version = '2.1.3' }
@@ -496,10 +475,10 @@ library.these-lens = { license = [
 ], version = '1.0.2' }
 library.time = { license = [
     { name = 'BSD-2-Clause', url = 'https://hackage.haskell.org/package/time/src/LICENSE' },
-], version = '1.15' }
+], version = '1.12.2' }
 library.transformers = { license = [
     { name = 'BSD-3-Clause', url = 'https://hackage.haskell.org/package/transformers/src/LICENSE' },
-], version = '0.6.2.0' }
+], version = '0.6.1.0' }
 library.transformers-base = { license = [
     { name = 'BSD-3-Clause', url = 'https://hackage.haskell.org/package/transformers-base/src/LICENSE' },
 ], indirect = true, version = '0.4.6' }
@@ -514,7 +493,7 @@ library.unboxing-vector = { license = [
 ], version = '0.2.0.0' }
 library.unix = { license = [
     { name = 'BSD-3-Clause', url = 'https://hackage.haskell.org/package/unix/src/LICENSE' },
-], version = '2.8.7.0' }
+], version = '2.8.6.0' }
 library.unliftio-core = { license = [
     { name = 'MIT', url = 'https://hackage.haskell.org/package/unliftio-core/src/LICENSE' },
 ], indirect = true, version = '0.2.1.0' }
@@ -553,7 +532,7 @@ library.witherable = { license = [
 ], version = '0.5' }
 library.xhtml = { license = [
     { name = 'BSD-3-Clause', url = 'https://hackage.haskell.org/package/xhtml/src/LICENSE' },
-], version = '3000.4.0.0' }
+], version = '3000.2.2.1' }
 
 # キー: filename
 # 型:   文字列
@@ -586,14 +565,13 @@ filename = 'submission/app/Main.hs'
 install = '''
 sudo apt-get update
 sudo apt-get upgrade -y
-sudo apt-get install -y --no-install-recommends build-essential ca-certificates curl libffi-dev libffi8ubuntu1 libgmp-dev libgmp10 libncurses-dev libncurses6 libtinfo6 llvm-15 clang-15
+sudo apt-get install -y --no-install-recommends build-essential ca-certificates curl libffi-dev libffi8ubuntu1 libgmp-dev libgmp10 libncurses-dev libncurses6 libtinfo6 llvm-15
 
 curl --proto '=https' --tlsv1.2 -sSf https://get-ghcup.haskell.org | BOOTSTRAP_HASKELL_NONINTERACTIVE=1 BOOTSTRAP_HASKELL_MINIMAL=1 sh
 mkdir -p ~/.cabal
 source ~/.ghcup/env
 ghcup install cabal 3.14.2.0 && ghcup set cabal 3.14.2.0
-ghcup config add-release-channel prereleases
-ghcup install ghc 9.10.2.20250817 && ghcup set ghc 9.10.2.20250817
+ghcup install ghc 9.8.4 && ghcup set ghc 9.8.4
 
 sudo apt-get install -y --no-install-recommends libgsl0-dev liblapack-dev libatlas-base-dev libglpk-dev
 
@@ -633,32 +611,30 @@ executable main
                   Cabal ^>=3.16.0.0,
                   Cabal-syntax ^>=3.16.0.0,
                   QuickCheck ^>=2.16.0.0,
-                  ac-library-hs ^>=1.5.2.1,
+                  ac-library-hs ^>=1.5.3.0,
                   adjunctions ^>=4.4.3,
                   array ==0.5.8.0,
                   attoparsec ^>=0.14.4,
-                  base ==4.20.2.0,
+                  base ==4.19.2.0,
                   bifunctors ^>=5.6.2,
                   binary ^>=0.8.9.3,
                   bitvec ^>=1.1.5.0,
-                  bytestring ^>=0.12.2.0,
+                  bytestring ^>=0.12.1.0,
                   comonad ^>=5.0.9,
                   containers ^>=0.8,
                   contravariant ^>=1.5.5,
-                  deepseq ==1.5.0.0,
-                  directory ^>=1.3.9.0,
+                  deepseq ==1.5.1.0,
+                  directory ^>=1.3.8.5,
                   distributive ^>=0.6.2.1,
-                  exceptions ^>=0.10.10,
+                  exceptions ^>=0.10.7,
                   extra ^>=1.8,
                   fgl ^>=5.8.3.0,
-                  filepath ^>=1.5.4.0,
+                  filepath ^>=1.4.301.0,
                   flow ^>=2.0.0.9,
                   free ^>=5.2,
                   ghc-bignum ==1.3,
-                  ghc-experimental,
-                  ghc-boot-th,
-                  ghc-internal,
-                  ghc-prim ==0.12.0,
+                  ghc-boot-th ==9.8.4,
+                  ghc-prim ==0.11.0,
                   hashable ^>=1.5.0.0,
                   heaps ^>=0.4.1,
                   hmatrix ^>=0.20.2,
@@ -701,16 +677,16 @@ executable main
                   strict ^>=0.5.1,
                   strict-lens ^>=0.4.1,
                   tagged ^>=0.8.9,
-                  template-haskell ==2.22.0.0,
+                  template-haskell ==2.21.0.0,
                   text ^>=2.1.3,
                   tf-random ^>=0.5,
                   these ^>=1.2.1,
                   these-lens ^>=1.0.2,
-                  time ^>=1.15,
-                  transformers ^>=0.6.2.0,
+                  time ^>=1.12.2,
+                  transformers ^>=0.6.1.0,
                   trifecta ^>=2.1.4,
                   unboxing-vector ^>=0.2.0.0,
-                  unix ==2.8.7.0,
+                  unix ==2.8.6.0,
                   unordered-containers ^>=0.2.20,
                   utility-ht ^>=0.0.17.2,
                   vector ^>=0.13.2.0,
@@ -720,10 +696,10 @@ executable main
                   vector-th-unbox ^>=0.2.2,
                   wide-word ^>=0.1.7.1,
                   witherable ^>=0.5,
-                  xhtml ^>=3000.4.0.0
+                  xhtml ^>=3000.2.2.1
 
     hs-source-dirs:   app
-    default-language: GHC2024
+    default-language: GHC2021
     if flag(atcoder)
       cpp-options: -DATCODER
 
@@ -733,8 +709,8 @@ cat > cabal.project <<'CABAL_PROJECT_EOF'
 packages: ./submission.cabal
 
 constraints: bitvec +libgmp,
-             clock +llvm,
-             text -simdutf,
+             -- clock +llvm,
+             text +simdutf,
              vector-algorithms +llvm
 optimization: 2
 
@@ -742,12 +718,7 @@ package *
     compiler: ghc
     ghc-options: -fllvm -Wall
 
-allow-newer: ilist:base,
-             directory:time,
-             Cabal-syntax:time,
-             Cabal:time,
-             ac-library-hs:random,
-             witherable:containers,
+allow-newer: witherable:containers,
              semialign:containers,
              scientific:containers,
              parallel:containers,
@@ -758,7 +729,6 @@ allow-newer: ilist:base,
              hashable:containers
 
 CABAL_PROJECT_EOF
-
 cat > cabal.project.freeze <<'CABAL_PROJECT_FREEZE_EOF'
 active-repositories: hackage.haskell.org:merge
 constraints: any.Cabal ==3.16.0.0,
@@ -768,7 +738,7 @@ constraints: any.Cabal ==3.16.0.0,
              any.QuickCheck ==2.16.0.0,
              QuickCheck -old-random +templatehaskell,
              any.StateVar ==1.2.2,
-             any.ac-library-hs ==1.5.2.1,
+             any.ac-library-hs ==1.5.3.0,
              any.adjunctions ==4.4.3,
              any.alex ==3.5.4.0,
              any.ansi-terminal ==1.1.3,
@@ -781,7 +751,7 @@ constraints: any.Cabal ==3.16.0.0,
              atomic-primops -debug,
              any.attoparsec ==0.14.4,
              attoparsec -developer,
-             any.base ==4.20.2.0,
+             any.base ==4.19.2.0,
              any.base-orphans ==0.9.3,
              any.bifunctors ==5.6.2,
              bifunctors +tagged,
@@ -791,12 +761,12 @@ constraints: any.Cabal ==3.16.0.0,
              any.blaze-builder ==0.4.4.1,
              any.blaze-html ==0.9.2.0,
              any.blaze-markup ==0.8.3.0,
-             any.bytestring ==0.12.2.0,
+             any.bytestring ==0.12.1.0,
              any.call-stack ==0.4.0,
              any.case-insensitive ==1.2.1.0,
              any.charset ==0.3.12,
              any.clock ==0.8.4,
-             clock +llvm,
+             clock -llvm,
              any.colour ==2.3.6,
              any.comonad ==5.0.9,
              comonad +containers +distributive +indexed-traversable,
@@ -804,29 +774,23 @@ constraints: any.Cabal ==3.16.0.0,
              any.contravariant ==1.5.5,
              contravariant +semigroups +statevar +tagged,
              any.data-default-class ==0.1.2.2,
-             any.deepseq ==1.5.0.0,
-             any.directory ==1.3.9.0,
-             directory +os-string,
+             any.deepseq ==1.5.1.0,
+             any.directory ==1.3.8.5,
              any.distributive ==0.6.2.1,
              distributive +semigroups +tagged,
-             any.exceptions ==0.10.10,
+             any.exceptions ==0.10.7,
              any.extra ==1.8,
              any.fgl ==5.8.3.0,
              fgl +containers042,
-             any.file-io ==0.1.5,
-             file-io +os-string,
-             any.filepath ==1.5.4.0,
-             filepath -cpphs,
+             any.filepath ==1.4.301.0,
              any.fingertree ==0.1.6.2,
              any.flow ==2.0.0.9,
              flow -pedantic,
              any.foldl ==1.4.18,
              any.free ==5.2,
              any.ghc-bignum ==1.3,
-             any.ghc-boot-th ==9.10.2.20250817,
-             any.ghc-experimental ==9.1002.0,
-             any.ghc-internal ==9.1002.0,
-             any.ghc-prim ==0.12.0,
+             any.ghc-boot-th ==9.8.4,
+             any.ghc-prim ==0.11.0,
              any.hashable ==1.5.0.0,
              hashable -arch-native -random-initial-seed,
              any.heaps ==0.4.1,
@@ -881,7 +845,7 @@ constraints: any.Cabal ==3.16.0.0,
              any.prettyprinter-ansi-terminal ==1.1.3,
              any.primitive ==0.9.1.0,
              any.process ==1.6.26.1,
-             process +os-string,
+             process -os-string,
              any.profunctors ==5.6.3,
              any.psqueues ==0.2.8.2,
              any.pvar ==1.0.0.0,
@@ -914,19 +878,20 @@ constraints: any.Cabal ==3.16.0.0,
              storable-tuple +splitbase,
              any.strict ==0.5.1,
              any.strict-lens ==0.4.1,
+             any.system-cxx-std-lib ==1.0,
              any.tagged ==0.8.9,
              tagged +deepseq +transformers,
              any.tasty ==1.5.3,
              tasty +unix,
-             any.template-haskell ==2.22.0.0,
+             any.template-haskell ==2.21.0.0,
              any.text ==2.1.3,
-             text -developer -extendedbenchmarks -pure-haskell -simdutf,
+             text -developer -extendedbenchmarks -pure-haskell +simdutf,
              any.tf-random ==0.5,
              any.th-abstraction ==0.7.1.0,
              any.these ==1.2.1,
              any.these-lens ==1.0.2,
-             any.time ==1.15,
-             any.transformers ==0.6.2.0,
+             any.time ==1.12.2,
+             any.transformers ==0.6.1.0,
              any.transformers-base ==0.4.6,
              transformers-base +orphaninstances,
              any.transformers-compat ==0.7.2,
@@ -934,8 +899,7 @@ constraints: any.Cabal ==3.16.0.0,
              any.trifecta ==2.1.4,
              any.unboxing-vector ==0.2.0.0,
              unboxing-vector +mono-traversable,
-             any.unix ==2.8.7.0,
-             unix +os-string,
+             any.unix ==2.8.6.0,
              any.unliftio-core ==0.2.1.0,
              any.unordered-containers ==0.2.20,
              unordered-containers -debug,
@@ -952,18 +916,14 @@ constraints: any.Cabal ==3.16.0.0,
              void -safe,
              any.wide-word ==0.1.7.1,
              any.witherable ==0.5,
-             any.xhtml ==3000.4.0.0
-index-state: hackage.haskell.org 2025-08-29T11:55:31Z
-
+             any.xhtml ==3000.2.2.1
+index-state: hackage.haskell.org 2025-09-06T08:19:27Z
 CABAL_PROJECT_FREEZE_EOF
-
 echo "main = return () :: IO ()" > app/Main.hs
-
 cabal v2-update
 cabal v2-configure --flags="+atcoder"
 # cabal v2-freeze
 cabal v2-build --only-dependencies
-
 rm app/Main.hs
 '''
 
