--- a/installscript.toml
+++ b/installscript.toml
@@ -208,7 +208,7 @@ library.blaze-markup = { license = [
 ], indirect = true, version = '0.8.3.0' }
 library.bytestring = { license = [
     { name = 'BSD-3-Clause', url = 'https://hackage.haskell.org/package/bytestring/src/LICENSE' },
-], version = '0.12.1.0' }
+], version = '0.12.2.0' }
 library.call-stack = { license = [
     { name = 'MIT', url = 'https://hackage.haskell.org/package/call-stack/src/LICENSE' },
 ], indirect = true, version = '0.4.0' }
@@ -241,7 +241,7 @@ library.deepseq = { license = [
 ], version = '1.5.1.0' }
 library.directory = { license = [
     { name = 'BSD-3-Clause', url = 'https://hackage.haskell.org/package/directory/src/LICENSE' },
-], version = '1.3.8.5' }
+], version = '1.3.9.0' }
 library.distributive = { license = [
     { name = 'BSD-2-Clause', url = 'https://hackage.haskell.org/package/distributive/src/LICENSE' },
 ], version = '0.6.2.1' }
@@ -257,6 +257,9 @@ library.fgl = { license = [
 library.filepath = { license = [
     { name = 'BSD-3-Clause', url = 'https://hackage.haskell.org/package/filepath/src/LICENSE' },
 ], version = '1.4.301.0' }
+library.file-io = { license = [
+    { name = 'BSD-3-Clause', url = 'https://hackage.haskell.org/package/file-io/src/LICENSE' },
+], indirect = true, version = '0.1.5' }
 library.fingertree = { license = [
     { name = 'BSD-3-Clause', url = 'https://hackage.haskell.org/package/fingertree/src/LICENSE' },
 ], indirect = true, version = '0.1.6.2' }
@@ -628,12 +631,12 @@ executable main
                   bifunctors ^>=5.6.2,
                   binary ^>=0.8.9.3,
                   bitvec ^>=1.1.5.0,
-                  bytestring ^>=0.12.1.0,
+                  bytestring ^>=0.12.2.0,
                   comonad ^>=5.0.9,
                   containers ^>=0.8,
                   contravariant ^>=1.5.5,
                   deepseq ==1.5.1.0,
-                  directory ^>=1.3.8.5,
+                  directory ^>=1.3.9.0,
                   distributive ^>=0.6.2.1,
                   exceptions ^>=0.10.7,
                   extra ^>=1.8,
@@ -738,6 +741,7 @@ allow-newer: witherable:containers,
              hashable:containers
 
 CABAL_PROJECT_EOF
+
 cat > cabal.project.freeze <<'CABAL_PROJECT_FREEZE_EOF'
 active-repositories: hackage.haskell.org:merge
 constraints: any.Cabal ==3.16.0.0,
@@ -770,7 +774,8 @@ constraints: any.Cabal ==3.16.0.0,
              any.blaze-builder ==0.4.4.1,
              any.blaze-html ==0.9.2.0,
              any.blaze-markup ==0.8.3.0,
-             any.bytestring ==0.12.1.0,
+             any.bytestring ==0.12.2.0,
+             bytestring -pure-haskell,
              any.call-stack ==0.4.0,
              any.case-insensitive ==1.2.1.0,
              any.charset ==0.3.12,
@@ -784,14 +789,18 @@ constraints: any.Cabal ==3.16.0.0,
              contravariant +semigroups +statevar +tagged,
              any.data-default-class ==0.1.2.2,
              any.deepseq ==1.5.1.0,
-             any.directory ==1.3.8.5,
+             any.directory ==1.3.9.0,
+             directory -os-string,
              any.distributive ==0.6.2.1,
              distributive +semigroups +tagged,
              any.exceptions ==0.10.7,
              any.extra ==1.8,
              any.fgl ==5.8.3.0,
              fgl +containers042,
+             any.file-io ==0.1.5,
+             file-io -os-string,
              any.filepath ==1.4.301.0,
+             filepath -cpphs,
              any.fingertree ==0.1.6.2,
              any.flow ==2.0.0.9,
              flow -pedantic,
@@ -909,6 +918,7 @@ constraints: any.Cabal ==3.16.0.0,
              any.unboxing-vector ==0.2.0.0,
              unboxing-vector +mono-traversable,
              any.unix ==2.8.6.0,
+             unix -os-string,
              any.unliftio-core ==0.2.1.0,
              any.unordered-containers ==0.2.20,
              unordered-containers -debug,
@@ -926,8 +936,10 @@ constraints: any.Cabal ==3.16.0.0,
              any.wide-word ==0.1.7.1,
              any.witherable ==0.5,
              any.xhtml ==3000.2.2.1
-index-state: hackage.haskell.org 2025-09-06T08:19:27Z
+index-state: hackage.haskell.org 2025-09-07T04:34:43Z
+
 CABAL_PROJECT_FREEZE_EOF
+
 echo "main = return () :: IO ()" > app/Main.hs
 cabal v2-update
 cabal v2-configure --flags="+atcoder"
